src/objects/Quality_Assurance__c.object
<CustomObject>
    <fields>
        <fullName>Date_Worked__c</fullName>
        <label>Date Worked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Listing__c</fullName>
        <label>Report Listing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reviewer_Name__c</fullName>
        <label>Reviewer Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allaire Jutting</fullName>
                </value>
                <value>
                    <fullName>Christina Garcia</fullName>
                </value>
                <value>
                    <fullName>Devon Asmus</fullName>
                </value>
                <value>
                    <fullName>Eileen Jutting</fullName>
                </value>
                <value>
                    <fullName>Shelagh Ghering</fullName>
                </value>
                <value>
                    <fullName>Gavin Duarte</fullName>
                </value>
                <value>
                    <fullName>Michelle Davis-Okiyefa</fullName>
                </value>
                <value>
                    <fullName>MarkAnthony Henry</fullName>
                </value>
                <value>
                    <fullName>Pam Hunt</fullName>
                </value>
                <value>
                    <fullName>Amanda Campos</fullName>
                    <isActive>false</isActive>
                    <label>Amanda Campos</label>
                </value>
                <value>
                    <fullName>Britt Branch</fullName>
                    <isActive>false</isActive>
                    <label>Britt Branch</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Hours_Worked__c</fullName>
        <label># of Hours Worked</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Reports_Approved__c</fullName>
        <label># of Reports Approved</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Reports_Touched__c</fullName>
        <label># of Reports Touched</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quality Assurance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reviewer_Name__c</columns>
        <columns>Date_Worked__c</columns>
        <columns>of_Hours_Worked__c</columns>
        <columns>of_Reports_Touched__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>Report_Listing__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Gavin</fullName>
        <columns>NAME</columns>
        <columns>Reviewer_Name__c</columns>
        <columns>Date_Worked__c</columns>
        <columns>of_Hours_Worked__c</columns>
        <columns>of_Reports_Touched__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>Report_Listing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reviewer_Name__c</field>
            <operation>equals</operation>
            <value>Gavin Duarte</value>
        </filters>
        <label>Gavin</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Markanthony</fullName>
        <columns>NAME</columns>
        <columns>Reviewer_Name__c</columns>
        <columns>Date_Worked__c</columns>
        <columns>of_Hours_Worked__c</columns>
        <columns>of_Reports_Touched__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>Report_Listing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reviewer_Name__c</field>
            <operation>equals</operation>
            <value>MarkAnthony Henry</value>
        </filters>
        <label>Markanthony</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Michelle</fullName>
        <columns>NAME</columns>
        <columns>Reviewer_Name__c</columns>
        <columns>Date_Worked__c</columns>
        <columns>of_Hours_Worked__c</columns>
        <columns>of_Reports_Touched__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>Report_Listing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reviewer_Name__c</field>
            <operation>equals</operation>
            <value>Michelle Davis-Okiyefa</value>
        </filters>
        <label>Michelle</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Shelagh</fullName>
        <columns>NAME</columns>
        <columns>Reviewer_Name__c</columns>
        <columns>Date_Worked__c</columns>
        <columns>of_Hours_Worked__c</columns>
        <columns>of_Reports_Touched__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>Report_Listing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reviewer_Name__c</field>
            <operation>equals</operation>
            <value>Shelagh Ghering</value>
        </filters>
        <label>Shelagh</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>QA-{000000}</displayFormat>
        <label>Quality Assurance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Assurance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>